2015-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/rtssmooth.cpp: Return the cube P in result list, correct indexing

2015-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/kfupdate.cpp: Non-const first two arguments, returning m and P

	* src/tfsmooth.cpp: Non-const first two arguments, returning m and P;
	correction in use of y argument

	* demo/kf_cwpa_demo.R: Corrections, temporal input from file, and two
	more plots

2015-12-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/tfsmooth.cpp: First complete version

2015-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/rtssmooth.cpp: Use automatic as<Cube> converter recently added
	to RcppArmadillo

	* tests/test_rtssmooth.R: Corresponding update

2014-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.5 with initial repo commit
